using typed variables in job workers